android/testData/gradle/Compatibility.gradle
apply plugin: 'com.android.application'

android {
    compileSdkVersion 19
    buildToolsVersion "19.0.0"

    defaultConfig {
        minSdkVersion 7
        targetSdkVersion 19
        versionCode 1
        versionName "1.0"
    }
}

dependencies {
    compile <error descr="This support library should not use a lower version (18) than the `targetSdkVersion` (19)">'com.android.support:support-v4:18.0.0'</error>

    // Suppressed:
    //noinspection GradleCompatible
    compile 'com.android.support:support-v4:18.0.0'
}
